[package]
name = "orbmapper"
version = "0.1.0"
authors = ["karim"]
edition = "2018"
publish = false

[dependencies.input-linux]
version = "^0.4"
features = ["with-serde"]

[dependencies]
input-linux-sys = "^0.6"
libc = "^0.2"
nix = "^0.19"
anyhow = "^1"
sudo = "^0.5"
serde = "^1"
serde_derive = "^1"
toml = "^0.5"
structopt = "^0.3"
arrayvec = "^0.7"

