[package]
name = "orbmapper"
version = "0.1.0"
authors = ["karim"]
edition = "2018"
publish = false

[package.metadata.release]
no-dev-version = true

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "Unreleased"
replace = "{{version}}"

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "\\.\\.\\.HEAD"
replace = "...{{tag_name}}"
exactly = 1

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "ReleaseDate"
replace = "{{date}}"

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "<!-- next-header -->"
replace = "<!-- next-header -->\n\n## [Unreleased] - ReleaseDate"
exactly = 1

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "<!-- next-url -->"
replace = "<!-- next-url -->\n[Unreleased]: https://github.com/karimElmougi/orbmapper/compare/{{tag_name}}...HEAD"
exactly = 1

[dependencies.input-linux]
version = "^0.4"
features = ["with-serde"]

[dependencies]
input-linux-sys = "^0.6"
libc = "^0.2"
nix = "^0.19"
anyhow = "^1"
sudo = "^0.5"
serde = "^1"
serde_derive = "^1"
toml = "^0.5"
structopt = "^0.3"
arrayvec = "^0.7"

